--- a/app.json
+++ b/app.json
@@ -38,7 +38,7 @@
       },
       {
         "pagePath": "pages/user/user",
-        "iconPath": "images/home.png",
+        "iconPath": "images/me_01.png",
         "selectedIconPath": "images/me.png",
         "text": "我的"
       }
