--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
     "pages/archives/archive",
     "pages/tags/tag",
     "pages/user/user",
-    "pages/web/web"
+    "pages/web/web",
+    "pages/comment/comment"
   ],
   "window": {
     "backgroundTextStyle": "light",
