--- a/project.config.json
+++ b/project.config.json
@@ -43,8 +43,15 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "评论",
+					"pathName": "pages/comment/comment",
+					"scene": null
+				}
+			]
 		}
 	}
 }
